# radar-sim-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plot_results.py
include/: cfar.h  chirp.h  doppler.h  export_csv.h  matched_filter.h  radar_params.h  simulate.h
src/: cfar.cpp  chirp.cpp  doppler.cpp  export_csv.cpp  main.cpp  matched_filter.cpp  radar_params.cpp  simulate.cpp
